--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/jasmine": "^5.1.8",
     "jasmine": "^5.8.0",
     "lucide-react": "^0.344.0",
+    "oidc-client-ts": "^3.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-oidc-context": "^3.3.0",
     "rxjs": "^7.8.2"
   },
   "devDependencies": {
