--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-oidc-context": "^3.3.0",
+    "react-qr-reader": "^3.0.0-beta-1",
     "rxjs": "^7.8.2"
   },
   "devDependencies": {
