--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   },
   "dependencies": {
     "@types/jasmine": "^5.1.8",
+    "@yudiel/react-qr-scanner": "^2.0.8",
     "jasmine": "^5.8.0",
     "lucide-react": "^0.344.0",
     "oidc-client-ts": "^3.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-oidc-context": "^3.3.0",
-    "react-qr-reader": "^3.0.0-beta-1",
     "rxjs": "^7.8.2"
   },
   "devDependencies": {
