--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^15.6.0",
     "react-oidc-context": "^3.3.0",
+    "react-router-dom": "^7.6.3",
     "rxjs": "^7.8.2"
   },
   "devDependencies": {
