--- a/package.json
+++ b/package.json
@@ -10,21 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@types/jasmine": "^5.1.8",
     "@yudiel/react-qr-scanner": "^2.0.8",
     "i18next": "^25.3.1",
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-http-backend": "^3.0.2",
-    "jasmine": "^5.8.0",
     "lucide-react": "^0.344.0",
     "oidc-client-ts": "^3.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.6.0",
     "react-oidc-context": "^3.3.0",
-    "react-router-dom": "^7.6.3",
-    "react-spinners": "^0.17.0",
-    "rxjs": "^7.8.2"
+    "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
